--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,78 +11,82 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.min.js"></script>
 </head>
 <body>
-<h2>管理员：消息管理界面</h2>
-<table class="table">
-    <thead>
-    <tr>
-        <th>发送者用户名</th>
-        <th>接收者用户名</th>
-        <th>短信内容</th>
-        <th>操作</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr v-for="message in messages" v-if="messages.length > 0">
-        <td v-text="message.fromUserName"></td>
-        <td v-text="message.toUserName"></td>
-        <td v-text="message.content"></td>
-        <td>
-            <button class="btn btn-primary" @click="openEditModal(message)">编辑</button>
-            <button class="btn btn-danger" @click="openDeleteModal(message)">删除</button>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<!-- 编辑消息的模态框 -->
-<div class="modal fade" id="editMessageModal" tabindex="-1" role="dialog" aria-labelledby="editMessageModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="editMessageModalLabel">编辑消息</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="messageContent">消息内容</label>
-                        <textarea id="messageContent" v-model="currentMessage.content" class="form-control"></textarea>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary" @click="saveMessage">保存</button>
+<div id="app">
+    <h2>管理员：消息管理界面</h2>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>发送者用户名</th>
+            <th>接收者用户名</th>
+            <th>短信内容</th>
+            <th>操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr v-for="message in messages" v-if="messages.length > 0">
+            <td v-text="message.fromUserName"></td>
+            <td v-text="message.toUserName"></td>
+            <td v-text="message.content"></td>
+            <td>
+                <button @click="openEditModal(message)" class="btn btn-primary">编辑</button>
+                <button @click="openDeleteModal(message)" class="btn btn-danger">删除</button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <!-- 编辑消息的模态框 -->
+    <div aria-hidden="true" aria-labelledby="editMessageModalLabel" class="modal fade" id="editMessageModal" role="dialog"
+         tabindex="-1">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editMessageModalLabel">编辑消息</h5>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="messageContent">消息内容</label>
+                            <textarea class="form-control" id="messageContent"
+                                      v-model="currentMessage.content"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" data-dismiss="modal" type="button">关闭</button>
+                    <button @click="saveMessage" class="btn btn-primary" type="button">保存</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- 删除消息的模态框 -->
-<div class="modal fade" id="deleteMessageModal" tabindex="-1" role="dialog" aria-labelledby="deleteMessageModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteMessageModalLabel">删除消息</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                确定要删除这个消息吗？
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-danger" @click="deleteMessage">删除</button>
+    <!-- 删除消息的模态框 -->
+    <div aria-hidden="true" aria-labelledby="deleteMessageModalLabel" class="modal fade" id="deleteMessageModal"
+         role="dialog"
+         tabindex="-1">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteMessageModalLabel">删除消息</h5>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    确定要删除这个消息吗？
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" data-dismiss="modal" type="button">取消</button>
+                    <button @click="deleteMessage" class="btn btn-danger" type="button">删除</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <script>
     var app = new Vue({
-        el: 'body',
+        el: '#app',
         data: {
             messages: [],
             currentMessage: {}
